refactored a bit
Took 52 minutes